--- a/reviewboard/static/rb/css/ui/text-editor.less
+++ b/reviewboard/static/rb/css/ui/text-editor.less
@@ -103,14 +103,6 @@
     }
 
     &.-is-rich {
-      .CodeMirror-cursor {
-        border-left-color: var(--ink-p-input-fg);
-      }
-
-      .CodeMirror-selected {
-        background: var(--ink-p-input-selection-bg);
-      }
-
       .CodeMirror-scroll {
         margin-bottom: -@_text-editor-vars[@toolbar-spacing] !important;
       }
